--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,7 @@ ul#flex-container {
 	list-style: none;
 	margin: 0; padding: 0;
 	display: flex;
+	flex-direction: row;
 }
 
 ul li {
@@ -18,9 +19,19 @@ ul li {
 	text-align: center;
 }
 
+ul li:first-child { background: #c2d775; }
+ul li:nth-child(2) { background: #007278; }
+ul li:nth-child(3) { background: #c7b600; flex-grow: 2; }
+ul li:nth-child(4) { background: #a90077; }
+ul li:nth-child(5) { background: #00a378; }
+ul li:last-child { background: #00ea72; }
+
+/* Flex order*/
+/*
 ul li:first-child { background: #c2d775; order: 2;}
 ul li:nth-child(2) { background: #007278; order: 1;}
 ul li:nth-child(3) { background: #c7b600; flex-grow: 2; order: 5;}
 ul li:nth-child(4) { background: #a90077; order: 6;}
 ul li:nth-child(5) { background: #00a378; order: 3;}
 ul li:last-child { background: #00ea72; order: 4}
+*/
